--- a/puper/frontend/src/pages/Homepage.css
+++ b/puper/frontend/src/pages/Homepage.css
@@ -41,7 +41,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  background: rgba(0, 0, 0, 0.4);
+  background: rgb(255, 255, 255);
   padding: 2rem;
 }
 
@@ -122,7 +122,7 @@
   display: inline-flex;
   align-items: center;
   gap: 0.75rem;
-  box-shadow: 0 4px 15px rgba(0, 0, 0, 0.3);
+  box-shadow: 0 4px 15px rgba(3, 122, 112, 0.961);
 }
 
 .hero-cta-button.primary-cta {
